src/test/ui/unreachable/unreachable-try-pattern.stderr
warning: unreachable expression
  --> $DIR/unreachable-try-pattern.rs:19:36
   |
LL |     let y = (match x { Ok(n) => Ok(n as u32), Err(e) => Err(e) })?;
   |                                    ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unreachable-try-pattern.rs:3:9
   |
LL | #![warn(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

warning: unreachable pattern
  --> $DIR/unreachable-try-pattern.rs:19:24
   |
LL |     let y = (match x { Ok(n) => Ok(n as u32), Err(e) => Err(e) })?;
   |                        ^^^^^
   |
note: lint level defined here
  --> $DIR/unreachable-try-pattern.rs:4:9
   |
LL | #![warn(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

warning: unreachable pattern
  --> $DIR/unreachable-try-pattern.rs:30:40
   |
LL |     let y = (match x { Ok(n) => Ok(n), Err(e) => Err(e) })?;
   |                                        ^^^^^^

error: compilation successful
  --> $DIR/unreachable-try-pattern.rs:36:1
   |
LL | / fn main() { //~ ERROR: compilation successful
LL | |     let _ = bar(Err(123));
LL | |     let _ = foo(Err(123));
LL | |     let _ = qux(Ok(123));
LL | |     let _ = vom(Ok(123));
LL | | }
   | |_^

error: aborting due to previous error

